[package]
name = "rspyast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
rustpython = { version = "0.3", features = ["freeze-stdlib"] }
rustpython-parser = { version = "0.3", features = ["full-lexer", "serde"] }
serde = { version = "1.0", features = ["derive", "serde_derive", "rc"] }
